--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -28,16 +28,22 @@
             commodi id libero eveniet harum perferendis laborum molestias quia.</p>
         </div>
         <div class="col-md-4">
-          <div class="card">
-            <img class="card-img-top" src="assets/img/realtors/kyle.jpg" alt="Seller of the month">
+        {% for realtor in realtors  %}
+          {% if realtor.is_mvp %}
+          <div class="card">    
+            <img class="card-img-top" src="{{realtor.photo.url}}" alt="Seller of the month">
             <div class="card-body">
               <h5 class="card-title">Seller Of The Month</h5>
-              <h6 class="text-secondary">Kyle Brown</h6>
+              <h6 class="text-secondary">{{realtor.name}}</h6>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis nesciunt amet, illo itaque similique repellat.
                 content.
               </p>
             </div>
           </div>
+          {% endif %}
+        {% endfor %}
+        
+          
         </div>
       </div>
     </div>
@@ -48,7 +54,7 @@
     <h2 class="display-4">We Work For You</h2>
     <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem velit aperiam, unde aliquid at similique!</h4>
     <hr>
-    <a href="listings.html" class="btn btn-secondary text-white btn-lg">View Our Featured Listings</a>
+    <a href="{% url 'listings' %}" class="btn btn-secondary text-white btn-lg">View Our Featured Listings</a>
   </section>
 
   <!-- Team -->
@@ -56,39 +62,22 @@
     <div class="container">
       <h2 class="text-center">Our Team</h2>
       <div class="row text-center">
+        {% for realtor in realtors  %}
         <div class="col-md-4">
-          <img src="assets/img/realtors/kyle.jpg" alt="" class="rounded-circle mb-3">
-          <h4>Kyle Brown</h4>
+          <img src="{{realtor.photo.url}}" alt="" class="rounded-circle mb-3">
+          <h4>{{realtor.name}}</h4>
           <p class="text-success">
             <i class="fas fa-award text-success mb-3"></i> Realtor</p>
           <hr>
           <p>
-            <i class="fas fa-phone"></i> (555)-555-5555</p>
+            <i class="fas fa-phone"></i> {{realtor.phone}}</p>
           <p>
-            <i class="fas fa-envelope-open"></i> kyle@btrealestate.co</p>
+            <i class="fas fa-envelope-open"></i> {{realtor.email}}</p>
         </div>
-
-        <div class="col-md-4">
-          <img src="assets/img/realtors/mark.jpg" alt="" class="rounded-circle mb-3">
-          <h4>Mark Hudson</h4>
-          <p class="text-success">Realtor</p>
-          <hr>
-          <p>
-            <i class="fas fa-phone"></i> (444)-444-4444</p>
-          <p>
-            <i class="fas fa-envelope-open"></i> mark@btrealestate.co</p>
-        </div>
-
-        <div class="col-md-4">
-          <img src="assets/img/realtors/jenny.jpg" alt="" class="rounded-circle mb-3">
-          <h4>Jenny Johnson</h4>
-          <p class="text-success">Realtor</p>
-          <hr>
-          <p>
-            <i class="fas fa-phone"></i> (333)-333-3333</p>
-          <p>
-            <i class="fas fa-envelope-open"></i> jenny@btrealestate.co</p>
-        </div>
+        
+        
+        
+        {% endfor %}
       </div>
     </div>
   </section>
